# Simulation-Chirurgicale-et-Reconstruction-3D-avec-3D-Slicer

./: README.md
projet 3d/SurgicalEducation/: CMakeLists.txt
projet 3d/SurgicalEducation/DICOMLoader/: CMakeLists.txt  DICOMLoader.py
projet 3d/SurgicalEducation/DICOMLoader/Resources/UI/: DICOMLoader.ui
projet 3d/SurgicalEducation/Reconstruction3D/: CMakeLists.txt  Reconstruction3D.py
projet 3d/SurgicalEducation/Reconstruction3D/Resources/UI/: Reconstruction3D.ui
projet 3d/SurgicalEducation/SurgicalSimulation/: CMakeLists.txt  SurgicalSimulation.py
projet 3d/SurgicalEducation/SurgicalSimulation/Resources/UI/: SurgicalSimulation.ui
